--- a/public/Juguetes.html
+++ b/public/Juguetes.html
@@ -31,8 +31,8 @@
       <footer is="mi-footer"></footer>
     </form>
     
-    <script src="/__/firebase/7.2.0/firebase-app.js"></script>
-    <script src="/__/firebase/7.2.0/firebase-firestore.js"></script>
+    <script src="/__/firebase/7.4.0/firebase-app.js"></script>
+    <script src="/__/firebase/7.4.0/firebase-firestore.js"></script>
     <script src="/__/firebase/init.js"></script>
     <script type="module">
       import { error } from "./lib/util.js";
@@ -65,11 +65,12 @@
       async function guarda(evt) {
         try {
           evt.preventDefault();
-          const NOMBRE = nombre.value.trim();
-		  const Marca = Marca.value.trim();
-          const FECHA = fecha.value.trim();
-          const PRECIO = precio.value.trim();
-          const modelo = { NOMBRE,Marca, FECHA, PRECIO };
+          const NOMBRE = vista.nombre.value.trim();
+		      const Marca = vista.Marca.value.trim();
+          const FECHA = vista.fecha.value.trim();
+          const PRECIO = vista.precio.value.trim();
+          const modelo = { NOMBRE,Marca, FECHA, PRECIO};
+
           await firestore.collection("Juguetes").doc(id).set(modelo);
           document.location = "index.html";
         } catch (e) {
